--- a/doc/man7/provider-cipher.pod
+++ b/doc/man7/provider-cipher.pod
@@ -2,144 +2,140 @@
 
 =head1 NAME
 
-provider-cipher - The cipher library E<lt>-E<gt> provider functions
+provider-cipher - The CIPHER provider dispatch interface
 
 =head1 SYNOPSIS
 
 =for openssl multiple includes
 
- #include <openssl/core_dispatch.h>
  #include <openssl/core_names.h>
+ #include <openssl/core_dispatch.h>
 
  /*
-  * None of these are actual functions, but are displayed like this for
-  * the function signatures for functions that are offered as function
-  * pointers in OSSL_DISPATCH arrays.
+  * The following function prototypes don't represent actual C functions
+  * but rather the signatures of so-called 'dispatched' functions.
+  * To indicate the difference, curly {braces} have been added around
+  * the function names.
+  *
+  * See L<provider-base(7)/Dispatched Functions> for an explanation
+  * how to interpret those prototypes.
   */
 
  /* Context management */
- void *OSSL_FUNC_cipher_newctx(void *provctx);
- void OSSL_FUNC_cipher_freectx(void *cctx);
- void *OSSL_FUNC_cipher_dupctx(void *cctx);
+ void *{cipher_newctx}(void *provctx);
+ void {cipher_freectx}(void *cctx);
+ void *{cipher_dupctx}(void *cctx);
 
  /* Encryption/decryption */
- int OSSL_FUNC_cipher_encrypt_init(void *cctx, const unsigned char *key,
-                                   size_t keylen, const unsigned char *iv,
-                                   size_t ivlen);
- int OSSL_FUNC_cipher_decrypt_init(void *cctx, const unsigned char *key,
-                                   size_t keylen, const unsigned char *iv,
-                                   size_t ivlen);
- int OSSL_FUNC_cipher_update(void *cctx, unsigned char *out, size_t *outl,
-                             size_t outsize, const unsigned char *in, size_t inl);
- int OSSL_FUNC_cipher_final(void *cctx, unsigned char *out, size_t *outl,
-                            size_t outsize);
- int OSSL_FUNC_cipher_cipher(void *cctx, unsigned char *out, size_t *outl,
-                             size_t outsize, const unsigned char *in, size_t inl);
+ int {cipher_encrypt_init}(void *cctx, const unsigned char *key,
+                           size_t keylen, const unsigned char *iv,
+                           size_t ivlen);
+ int {cipher_decrypt_init}(void *cctx, const unsigned char *key,
+                           size_t keylen, const unsigned char *iv,
+                           size_t ivlen);
+ int {cipher_update}(void *cctx, unsigned char *out, size_t *outl,
+                     size_t outsize, const unsigned char *in, size_t inl);
+ int {cipher_final}(void *cctx, unsigned char *out, size_t *outl,
+                    size_t outsize);
+ int {cipher_cipher}(void *cctx, unsigned char *out, size_t *outl,
+                     size_t outsize, const unsigned char *in, size_t inl);
 
  /* Cipher parameter descriptors */
- const OSSL_PARAM *OSSL_FUNC_cipher_gettable_params(void);
+ const OSSL_PARAM *{cipher_gettable_params}(void);
 
  /* Cipher operation parameter descriptors */
- const OSSL_PARAM *OSSL_FUNC_cipher_gettable_ctx_params(void);
- const OSSL_PARAM *OSSL_FUNC_cipher_settable_ctx_params(void);
+ const OSSL_PARAM *{cipher_gettable_ctx_params}(void);
+ const OSSL_PARAM *{cipher_settable_ctx_params}(void);
 
  /* Cipher parameters */
- int OSSL_FUNC_cipher_get_params(OSSL_PARAM params[]);
+ int {cipher_get_params}(OSSL_PARAM params[]);
 
  /* Cipher operation parameters */
- int OSSL_FUNC_cipher_get_ctx_params(void *cctx, OSSL_PARAM params[]);
- int OSSL_FUNC_cipher_set_ctx_params(void *cctx, const OSSL_PARAM params[]);
+ int {cipher_get_ctx_params}(void *cctx, OSSL_PARAM params[]);
+ int {cipher_set_ctx_params}(void *cctx, const OSSL_PARAM params[]);
 
 =head1 DESCRIPTION
 
-This documentation is primarily aimed at provider authors. See L<provider(7)>
-for further information.
+This documentation is primarily aimed at provider authors.
+See L<provider(7)> for further information.
 
 The CIPHER operation enables providers to implement cipher algorithms and make
 them available to applications via the API functions L<EVP_EncryptInit_ex(3)>,
 L<EVP_EncryptUpdate(3)> and L<EVP_EncryptFinal(3)> (as well as the decrypt
 equivalents and other related functions).
 
-All "functions" mentioned here are passed as function pointers between
+All functions listed here are so called I<dispatched functions>
+(see L<provider-base(7)/Dispatched Functions>),
+which are passed as function pointers between
 F<libcrypto> and the provider in B<OSSL_DISPATCH> arrays via
 B<OSSL_ALGORITHM> arrays that are returned by the provider's
 provider_query_operation() function
 (see L<provider-base(7)/Provider Functions>).
 
-All these "functions" have a corresponding function type definition
-named B<OSSL_{name}_fn>, and a helper function to retrieve the
-function pointer from an B<OSSL_DISPATCH> element named
-B<OSSL_FUNC_{name}>.
-For example, the "function" OSSL_FUNC_cipher_newctx() has these:
-
- typedef void *(OSSL_OSSL_FUNC_cipher_newctx_fn)(void *provctx);
- static ossl_inline OSSL_OSSL_FUNC_cipher_newctx_fn
-     OSSL_FUNC_cipher_newctx(const OSSL_DISPATCH *opf);
-
 B<OSSL_DISPATCH> arrays are indexed by numbers that are provided as
 macros in L<openssl-core_dispatch.h(7)>, as follows:
 
- OSSL_FUNC_cipher_newctx               OSSL_FUNC_CIPHER_NEWCTX
- OSSL_FUNC_cipher_freectx              OSSL_FUNC_CIPHER_FREECTX
- OSSL_FUNC_cipher_dupctx               OSSL_FUNC_CIPHER_DUPCTX
+ {cipher_newctx}                  OSSL_FUNC_CIPHER_NEWCTX
+ {cipher_freectx}                 OSSL_FUNC_CIPHER_FREECTX
+ {cipher_dupctx}                  OSSL_FUNC_CIPHER_DUPCTX
 
- OSSL_FUNC_cipher_encrypt_init         OSSL_FUNC_CIPHER_ENCRYPT_INIT
- OSSL_FUNC_cipher_decrypt_init         OSSL_FUNC_CIPHER_DECRYPT_INIT
- OSSL_FUNC_cipher_update               OSSL_FUNC_CIPHER_UPDATE
- OSSL_FUNC_cipher_final                OSSL_FUNC_CIPHER_FINAL
- OSSL_FUNC_cipher_cipher               OSSL_FUNC_CIPHER_CIPHER
+ {cipher_encrypt_init}            OSSL_FUNC_CIPHER_ENCRYPT_INIT
+ {cipher_decrypt_init}            OSSL_FUNC_CIPHER_DECRYPT_INIT
+ {cipher_update}                  OSSL_FUNC_CIPHER_UPDATE
+ {cipher_final}                   OSSL_FUNC_CIPHER_FINAL
+ {cipher_cipher}                  OSSL_FUNC_CIPHER_CIPHER
 
- OSSL_FUNC_cipher_get_params           OSSL_FUNC_CIPHER_GET_PARAMS
- OSSL_FUNC_cipher_get_ctx_params       OSSL_FUNC_CIPHER_GET_CTX_PARAMS
- OSSL_FUNC_cipher_set_ctx_params       OSSL_FUNC_CIPHER_SET_CTX_PARAMS
+ {cipher_get_params}              OSSL_FUNC_CIPHER_GET_PARAMS
+ {cipher_get_ctx_params}          OSSL_FUNC_CIPHER_GET_CTX_PARAMS
+ {cipher_set_ctx_params}          OSSL_FUNC_CIPHER_SET_CTX_PARAMS
 
- OSSL_FUNC_cipher_gettable_params      OSSL_FUNC_CIPHER_GETTABLE_PARAMS
- OSSL_FUNC_cipher_gettable_ctx_params  OSSL_FUNC_CIPHER_GETTABLE_CTX_PARAMS
- OSSL_FUNC_cipher_settable_ctx_params  OSSL_FUNC_CIPHER_SETTABLE_CTX_PARAMS
+ {cipher_gettable_params}         OSSL_FUNC_CIPHER_GETTABLE_PARAMS
+ {cipher_gettable_ctx_params}     OSSL_FUNC_CIPHER_GETTABLE_CTX_PARAMS
+ {cipher_settable_ctx_params}     OSSL_FUNC_CIPHER_SETTABLE_CTX_PARAMS
 
 A cipher algorithm implementation may not implement all of these functions.
 In order to be a consistent set of functions there must at least be a complete
 set of "encrypt" functions, or a complete set of "decrypt" functions, or a
 single "cipher" function.
-In all cases both the OSSL_FUNC_cipher_newctx and OSSL_FUNC_cipher_freectx functions must be
+In all cases both the {cipher_newctx} and {cipher_freectx} functions must be
 present.
 All other functions are optional.
 
 =head2 Context Management Functions
 
-OSSL_FUNC_cipher_newctx() should create and return a pointer to a provider side
+{cipher_newctx}() should create and return a pointer to a provider side
 structure for holding context information during a cipher operation.
 A pointer to this context will be passed back in a number of the other cipher
 operation function calls.
 The parameter I<provctx> is the provider context generated during provider
 initialisation (see L<provider(7)>).
 
-OSSL_FUNC_cipher_freectx() is passed a pointer to the provider side cipher context in
+{cipher_freectx}() is passed a pointer to the provider side cipher context in
 the I<cctx> parameter.
 This function should free any resources associated with that context.
 
-OSSL_FUNC_cipher_dupctx() should duplicate the provider side cipher context in the
+{cipher_dupctx}() should duplicate the provider side cipher context in the
 I<cctx> parameter and return the duplicate copy.
 
 =head2 Encryption/Decryption Functions
 
-OSSL_FUNC_cipher_encrypt_init() initialises a cipher operation for encryption given a
+{cipher_encrypt_init}() initialises a cipher operation for encryption given a
 newly created provider side cipher context in the I<cctx> parameter.
 The key to be used is given in I<key> which is I<keylen> bytes long.
 The IV to be used is given in I<iv> which is I<ivlen> bytes long.
 
-OSSL_FUNC_cipher_decrypt_init() is the same as OSSL_FUNC_cipher_encrypt_init() except that it
+{cipher_decrypt_init}() is the same as {cipher_encrypt_init}() except that it
 initialises the context for a decryption operation.
 
-OSSL_FUNC_cipher_update() is called to supply data to be encrypted/decrypted as part of
+{cipher_update}() is called to supply data to be encrypted/decrypted as part of
 a previously initialised cipher operation.
 The I<cctx> parameter contains a pointer to a previously initialised provider
 side context.
-OSSL_FUNC_cipher_update() should encrypt/decrypt I<inl> bytes of data at the location
+{cipher_update}() should encrypt/decrypt I<inl> bytes of data at the location
 pointed to by I<in>.
 The encrypted data should be stored in I<out> and the amount of data written to
 I<*outl> which should not exceed I<outsize> bytes.
-OSSL_FUNC_cipher_update() may be called multiple times for a single cipher operation.
+{cipher_update}() may be called multiple times for a single cipher operation.
 It is the responsibility of the cipher implementation to handle input lengths
 that are not multiples of the block length.
 In such cases a cipher implementation will typically cache partial blocks of
@@ -148,8 +144,8 @@ I<out> may be the same location as I<in> but it should not partially overlap.
 The same expectations apply to I<outsize> as documented for
 L<EVP_EncryptUpdate(3)> and L<EVP_DecryptUpdate(3)>.
 
-OSSL_FUNC_cipher_final() completes an encryption or decryption started through previous
-OSSL_FUNC_cipher_encrypt_init() or OSSL_FUNC_cipher_decrypt_init(), and OSSL_FUNC_cipher_update()
+{cipher_final}() completes an encryption or decryption started through previous
+{cipher_encrypt_init}() or {cipher_decrypt_init}(), and {cipher_update}()
 calls.
 The I<cctx> parameter contains a pointer to the provider side context.
 Any final encryption/decryption output should be written to I<out> and the
@@ -157,9 +153,9 @@ amount of data written to I<*outl> which should not exceed I<outsize> bytes.
 The same expectations apply to I<outsize> as documented for
 L<EVP_EncryptFinal(3)> and L<EVP_DecryptFinal(3)>.
 
-OSSL_FUNC_cipher_cipher() performs encryption/decryption using the provider side cipher
+{cipher_cipher}() performs encryption/decryption using the provider side cipher
 context in the I<cctx> parameter that should have been previously initialised via
-a call to OSSL_FUNC_cipher_encrypt_init() or OSSL_FUNC_cipher_decrypt_init().
+a call to {cipher_encrypt_init}() or {cipher_decrypt_init}().
 This should call the raw underlying cipher function without any padding.
 This will be invoked in the provider as a result of the application calling
 L<EVP_Cipher(3)>.
@@ -176,20 +172,20 @@ I<outsize> bytes.
 See L<OSSL_PARAM(3)> for further details on the parameters structure used by
 these functions.
 
-OSSL_FUNC_cipher_get_params() gets details of the algorithm implementation
+{cipher_get_params}() gets details of the algorithm implementation
 and stores them in I<params>.
 
-OSSL_FUNC_cipher_set_ctx_params() sets cipher operation parameters for the
+{cipher_set_ctx_params}() sets cipher operation parameters for the
 provider side cipher context I<cctx> to I<params>.
 Any parameter settings are additional to any that were previously set.
 
-OSSL_FUNC_cipher_get_ctx_params() gets cipher operation details details from
+{cipher_get_ctx_params}() gets cipher operation details details from
 the given provider side cipher context I<cctx> and stores them in I<params>.
 
-OSSL_FUNC_cipher_gettable_params(), OSSL_FUNC_cipher_gettable_ctx_params(), and
-OSSL_FUNC_cipher_settable_ctx_params() all return constant B<OSSL_PARAM> arrays
-as descriptors of the parameters that OSSL_FUNC_cipher_get_params(),
-OSSL_FUNC_cipher_get_ctx_params(), and OSSL_FUNC_cipher_set_ctx_params() can handle,
+{cipher_gettable_params}(), {cipher_gettable_ctx_params}(), and
+{cipher_settable_ctx_params}() all return constant B<OSSL_PARAM> arrays
+as descriptors of the parameters that {cipher_get_params}(),
+{cipher_get_ctx_params}(), and {cipher_set_ctx_params}() can handle,
 respectively.
 
 Parameters currently recognised by built-in ciphers are as follows. Not all
@@ -286,7 +282,7 @@ output buffers are always the same memory location.
 AEAD IVs in TLSv1.2 consist of an implicit "fixed" part and an explicit part
 that varies with every record.
 Setting a TLS fixed IV changes a cipher to encrypt/decrypt TLS records.
-TLS records are encrypted/decrypted using a single OSSL_FUNC_cipher_cipher call per
+TLS records are encrypted/decrypted using a single {cipher_cipher} call per
 record.
 For a record decryption the first bytes of the input buffer will be the explicit
 part of the IV and the final bytes of the input buffer will be the AEAD tag.
@@ -307,7 +303,7 @@ write that to the output buffer, and finally add the tag onto the end of the
 output buffer.
 
 Whether encrypting or decrypting the value written to I<*outl> in the
-OSSL_FUNC_cipher_cipher call should be the length of the payload excluding the explicit
+{cipher_cipher} call should be the length of the payload excluding the explicit
 IV length and the tag length.
 
 =item "ivlen" (B<OSSL_CIPHER_PARAM_AEAD_IVLEN>) <unsigned integer>
@@ -414,16 +410,16 @@ Gets the result of running the "tls1multi_aad" operation.
 
 =head1 RETURN VALUES
 
-OSSL_FUNC_cipher_newctx() and OSSL_FUNC_cipher_dupctx() should return the newly created
+{cipher_newctx}() and {cipher_dupctx}() should return the newly created
 provider side cipher context, or NULL on failure.
 
-OSSL_FUNC_cipher_encrypt_init(), OSSL_FUNC_cipher_decrypt_init(), OSSL_FUNC_cipher_update(),
-OSSL_FUNC_cipher_final(), OSSL_FUNC_cipher_cipher(), OSSL_FUNC_cipher_get_params(),
-OSSL_FUNC_cipher_get_ctx_params() and OSSL_FUNC_cipher_set_ctx_params() should return 1 for
+{cipher_encrypt_init}(), {cipher_decrypt_init}(), {cipher_update}(),
+{cipher_final}(), {cipher_cipher}(), {cipher_get_params}(),
+{cipher_get_ctx_params}() and {cipher_set_ctx_params}() should return 1 for
 success or 0 on error.
 
-OSSL_FUNC_cipher_gettable_params(), OSSL_FUNC_cipher_gettable_ctx_params() and
-OSSL_FUNC_cipher_settable_ctx_params() should return a constant B<OSSL_PARAM>
+{cipher_gettable_params}(), {cipher_gettable_ctx_params}() and
+{cipher_settable_ctx_params}() should return a constant B<OSSL_PARAM>
 array, or NULL if none is offered.
 
 =head1 SEE ALSO
