--- a/doc/man7/provider-digest.pod
+++ b/doc/man7/provider-digest.pod
@@ -2,134 +2,131 @@
 
 =head1 NAME
 
-provider-digest - The digest library E<lt>-E<gt> provider functions
+provider-digest - The DIGEST provider dispatch interface
 
 =head1 SYNOPSIS
 
 =for openssl multiple includes
 
- #include <openssl/core_dispatch.h>
  #include <openssl/core_names.h>
+ #include <openssl/core_dispatch.h>
 
  /*
-  * Digests support the following function signatures in OSSL_DISPATCH arrays.
-  * (The function signatures are not actual functions).
+  * The following function prototypes don't represent actual C functions
+  * but rather the signatures of so-called 'dispatched' functions.
+  * To indicate the difference, curly {braces} have been added around
+  * the function names.
+  *
+  * See L<provider-base(7)/Dispatched Functions> for an explanation
+  * how to interpret those prototypes.
   */
 
  /* Context management */
- void *OSSL_FUNC_digest_newctx(void *provctx);
- void OSSL_FUNC_digest_freectx(void *dctx);
- void *OSSL_FUNC_digest_dupctx(void *dctx);
+ void *{digest_newctx}(void *provctx);
+ void {digest_freectx}(void *dctx);
+ void *{digest_dupctx}(void *dctx);
 
  /* Digest generation */
- int OSSL_FUNC_digest_init(void *dctx);
- int OSSL_FUNC_digest_update(void *dctx, const unsigned char *in, size_t inl);
- int OSSL_FUNC_digest_final(void *dctx, unsigned char *out, size_t *outl,
-                            size_t outsz);
- int OSSL_FUNC_digest_digest(void *provctx, const unsigned char *in, size_t inl,
-                             unsigned char *out, size_t *outl, size_t outsz);
+ int {digest_init}(void *dctx);
+ int {digest_update}(void *dctx, const unsigned char *in, size_t inl);
+ int {digest_final}(void *dctx, unsigned char *out, size_t *outl,
+                    size_t outsz);
+ int {digest_digest}(void *provctx, const unsigned char *in, size_t inl,
+                     unsigned char *out, size_t *outl, size_t outsz);
 
  /* Digest parameter descriptors */
- const OSSL_PARAM *OSSL_FUNC_digest_gettable_params(void);
+ const OSSL_PARAM *{digest_gettable_params}(void);
 
  /* Digest operation parameter descriptors */
- const OSSL_PARAM *OSSL_FUNC_digest_gettable_ctx_params(void);
- const OSSL_PARAM *OSSL_FUNC_digest_settable_ctx_params(void);
+ const OSSL_PARAM *{digest_gettable_ctx_params}(void);
+ const OSSL_PARAM *{digest_settable_ctx_params}(void);
 
  /* Digest parameters */
- int OSSL_FUNC_digest_get_params(OSSL_PARAM params[]);
+ int {digest_get_params}(OSSL_PARAM params[]);
 
  /* Digest operation parameters */
- int OSSL_FUNC_digest_set_ctx_params(void *dctx, const OSSL_PARAM params[]);
- int OSSL_FUNC_digest_get_ctx_params(void *dctx, OSSL_PARAM params[]);
+ int {digest_set_ctx_params}(void *dctx, const OSSL_PARAM params[]);
+ int {digest_get_ctx_params}(void *dctx, OSSL_PARAM params[]);
 
 =head1 DESCRIPTION
 
-This documentation is primarily aimed at provider authors. See L<provider(7)>
-for further information.
+This documentation is primarily aimed at provider authors.
+See L<provider(7)> for further information.
 
 The DIGEST operation enables providers to implement digest algorithms and make
 them available to applications via the API functions L<EVP_DigestInit_ex(3)>,
 L<EVP_DigestUpdate(3)> and L<EVP_DigestFinal(3)> (and other related functions).
 
-All "functions" mentioned here are passed as function pointers between
+All functions listed here are so called I<dispatched functions>
+(see L<provider-base(7)/Dispatched Functions>),
+which are passed as function pointers between
 F<libcrypto> and the provider in B<OSSL_DISPATCH> arrays via
 B<OSSL_ALGORITHM> arrays that are returned by the provider's
 provider_query_operation() function
 (see L<provider-base(7)/Provider Functions>).
 
-All these "functions" have a corresponding function type definition
-named B<OSSL_{name}_fn>, and a helper function to retrieve the
-function pointer from an B<OSSL_DISPATCH> element named
-B<OSSL_FUNC_{name}>.
-For example, the "function" OSSL_FUNC_digest_newctx() has these:
-
- typedef void *(OSSL_OSSL_FUNC_digest_newctx_fn)(void *provctx);
- static ossl_inline OSSL_OSSL_FUNC_digest_newctx_fn
-     OSSL_FUNC_digest_newctx(const OSSL_DISPATCH *opf);
-
 B<OSSL_DISPATCH> arrays are indexed by numbers that are provided as
 macros in L<openssl-core_dispatch.h(7)>, as follows:
 
- OSSL_FUNC_digest_newctx               OSSL_FUNC_DIGEST_NEWCTX
- OSSL_FUNC_digest_freectx              OSSL_FUNC_DIGEST_FREECTX
- OSSL_FUNC_digest_dupctx               OSSL_FUNC_DIGEST_DUPCTX
-
- OSSL_FUNC_digest_init                 OSSL_FUNC_DIGEST_INIT
- OSSL_FUNC_digest_update               OSSL_FUNC_DIGEST_UPDATE
- OSSL_FUNC_digest_final                OSSL_FUNC_DIGEST_FINAL
- OSSL_FUNC_digest_digest               OSSL_FUNC_DIGEST_DIGEST
-
- OSSL_FUNC_digest_get_params           OSSL_FUNC_DIGEST_GET_PARAMS
- OSSL_FUNC_digest_get_ctx_params       OSSL_FUNC_DIGEST_GET_CTX_PARAMS
- OSSL_FUNC_digest_set_ctx_params       OSSL_FUNC_DIGEST_SET_CTX_PARAMS
-
- OSSL_FUNC_digest_gettable_params      OSSL_FUNC_DIGEST_GETTABLE_PARAMS
- OSSL_FUNC_digest_gettable_ctx_params  OSSL_FUNC_DIGEST_GETTABLE_CTX_PARAMS
- OSSL_FUNC_digest_settable_ctx_params  OSSL_FUNC_DIGEST_SETTABLE_CTX_PARAMS
+ {digest_newctx}                  OSSL_FUNC_DIGEST_NEWCTX
+ {digest_freectx}                 OSSL_FUNC_DIGEST_FREECTX
+ {digest_dupctx}                  OSSL_FUNC_DIGEST_DUPCTX
+ 
+ {digest_init}                    OSSL_FUNC_DIGEST_INIT
+ {digest_update}                  OSSL_FUNC_DIGEST_UPDATE
+ {digest_final}                   OSSL_FUNC_DIGEST_FINAL
+ {digest_digest}                  OSSL_FUNC_DIGEST_DIGEST
+ 
+ {digest_get_params}              OSSL_FUNC_DIGEST_GET_PARAMS
+ {digest_get_ctx_params}          OSSL_FUNC_DIGEST_GET_CTX_PARAMS
+ {digest_set_ctx_params}          OSSL_FUNC_DIGEST_SET_CTX_PARAMS
+ 
+ {digest_gettable_params}         OSSL_FUNC_DIGEST_GETTABLE_PARAMS
+ {digest_gettable_ctx_params}     OSSL_FUNC_DIGEST_GETTABLE_CTX_PARAMS
+ {digest_settable_ctx_params}     OSSL_FUNC_DIGEST_SETTABLE_CTX_PARAMS
 
 A digest algorithm implementation may not implement all of these functions.
-In order to be usable all or none of OSSL_FUNC_digest_newctx, OSSL_FUNC_digest_freectx,
-OSSL_FUNC_digest_init, OSSL_FUNC_digest_update and OSSL_FUNC_digest_final should be implemented.
+In order to be usable all or none of {digest_newctx}, {digest_freectx},
+{digest_init}, {digest_update} and {digest_final} should be implemented.
 All other functions are optional.
 
 =head2 Context Management Functions
 
-OSSL_FUNC_digest_newctx() should create and return a pointer to a provider side
+{digest_newctx}() should create and return a pointer to a provider side
 structure for holding context information during a digest operation.
 A pointer to this context will be passed back in a number of the other digest
 operation function calls.
 The parameter I<provctx> is the provider context generated during provider
 initialisation (see L<provider(7)>).
 
-OSSL_FUNC_digest_freectx() is passed a pointer to the provider side digest context in
+{digest_freectx}() is passed a pointer to the provider side digest context in
 the I<dctx> parameter.
 This function should free any resources associated with that context.
 
-OSSL_FUNC_digest_dupctx() should duplicate the provider side digest context in the
+{digest_dupctx}() should duplicate the provider side digest context in the
 I<dctx> parameter and return the duplicate copy.
 
 =head2 Digest Generation Functions
 
-OSSL_FUNC_digest_init() initialises a digest operation given a newly created
+{digest_init}() initialises a digest operation given a newly created
 provider side digest context in the I<dctx> parameter.
 
-OSSL_FUNC_digest_update() is called to supply data to be digested as part of a
+{digest_update}() is called to supply data to be digested as part of a
 previously initialised digest operation.
 The I<dctx> parameter contains a pointer to a previously initialised provider
 side context.
-OSSL_FUNC_digest_update() should digest I<inl> bytes of data at the location pointed to
+{digest_update}() should digest I<inl> bytes of data at the location pointed to
 by I<in>.
-OSSL_FUNC_digest_update() may be called multiple times for a single digest operation.
+{digest_update}() may be called multiple times for a single digest operation.
 
-OSSL_FUNC_digest_final() generates a digest started through previous OSSL_FUNC_digest_init()
-and OSSL_FUNC_digest_update() calls.
+{digest_final}() generates a digest started through previous {digest_init}()
+and {digest_update}() calls.
 The I<dctx> parameter contains a pointer to the provider side context.
 The digest should be written to I<*out> and the length of the digest to
 I<*outl>.
 The digest should not exceed I<outsz> bytes.
 
-OSSL_FUNC_digest_digest() is a "oneshot" digest function.
+{digest_digest}() is a "oneshot" digest function.
 No provider side digest context is used.
 Instead the provider context that was created during provider initialisation is
 passed in the I<provctx> parameter (see L<provider(7)>).
@@ -142,20 +139,20 @@ exceed I<outsz> bytes.
 See L<OSSL_PARAM(3)> for further details on the parameters structure used by
 these functions.
 
-OSSL_FUNC_digest_get_params() gets details of the algorithm implementation
+{digest_get_params}() gets details of the algorithm implementation
 and stores them in I<params>.
 
-OSSL_FUNC_digest_set_ctx_params() sets digest operation parameters for the
+{digest_set_ctx_params}() sets digest operation parameters for the
 provider side digest context I<dctx> to I<params>.
 Any parameter settings are additional to any that were previously set.
 
-OSSL_FUNC_digest_get_ctx_params() gets digest operation details details from
+{digest_get_ctx_params}() gets digest operation details details from
 the given provider side digest context I<dctx> and stores them in I<params>.
 
-OSSL_FUNC_digest_gettable_params(), OSSL_FUNC_digest_gettable_ctx_params(), and
-OSSL_FUNC_digest_settable_ctx_params() all return constant B<OSSL_PARAM> arrays
-as descriptors of the parameters that OSSL_FUNC_digest_get_params(),
-OSSL_FUNC_digest_get_ctx_params(), and OSSL_FUNC_digest_set_ctx_params() can handle,
+{digest_gettable_params}(), {digest_gettable_ctx_params}(), and
+{digest_settable_ctx_params}() all return constant B<OSSL_PARAM> arrays
+as descriptors of the parameters that {digest_get_params}(),
+{digest_get_ctx_params}(), and {digest_set_ctx_params}() can handle,
 respectively.
 
 Parameters currently recognised by built-in digests with this function
@@ -217,28 +214,28 @@ B<unsigned long int>.
 
 =head2 Digest Context Parameters
 
-OSSL_FUNC_digest_set_ctx_params() sets digest parameters associated with the
+{digest_set_ctx_params}() sets digest parameters associated with the
 given provider side digest context I<dctx> to I<params>.
 Any parameter settings are additional to any that were previously set.
 See L<OSSL_PARAM(3)> for further details on the parameters structure.
 
-OSSL_FUNC_digest_get_ctx_params() gets details of currently set parameters
+{digest_get_ctx_params}() gets details of currently set parameters
 values associated with the give provider side digest context I<dctx>
 and stores them in I<params>.
 See L<OSSL_PARAM(3)> for further details on the parameters structure.
 
 =head1 RETURN VALUES
 
-OSSL_FUNC_digest_newctx() and OSSL_FUNC_digest_dupctx() should return the newly created
+{digest_newctx}() and {digest_dupctx}() should return the newly created
 provider side digest context, or NULL on failure.
 
-OSSL_FUNC_digest_init(), OSSL_FUNC_digest_update(), OSSL_FUNC_digest_final(), OSSL_FUNC_digest_digest(),
-OSSL_FUNC_digest_set_params() and OSSL_FUNC_digest_get_params() should return 1 for success or
+{digest_init}(), {digest_update}(), {digest_final}(), {digest_digest}(),
+{digest_set_params}() and {digest_get_params}() should return 1 for success or
 0 on error.
 
-OSSL_FUNC_digest_size() should return the digest size.
+{digest_size}() should return the digest size.
 
-OSSL_FUNC_digest_block_size() should return the block size of the underlying digest
+{digest_block_size}() should return the block size of the underlying digest
 algorithm.
 
 =head1 SEE ALSO
