--- a/doc/man7/provider-keyexch.pod
+++ b/doc/man7/provider-keyexch.pod
@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-provider-keyexch - The keyexch library E<lt>-E<gt> provider functions
+provider-keyexch - The KEYEXCH provider dispatch interface
 
 =head1 SYNOPSIS
 
@@ -12,73 +12,68 @@ provider-keyexch - The keyexch library E<lt>-E<gt> provider functions
  #include <openssl/core_names.h>
 
  /*
-  * None of these are actual functions, but are displayed like this for
-  * the function signatures for functions that are offered as function
-  * pointers in OSSL_DISPATCH arrays.
+  * The following function prototypes don't represent actual C functions
+  * but rather the signatures of so-called 'dispatched' functions.
+  * To indicate the difference, curly {braces} have been added around
+  * the function names.
+  *
+  * See L<provider-base(7)/Dispatched Functions> for an explanation
+  * how to interpret those prototypes.
   */
 
  /* Context management */
- void *OSSL_FUNC_keyexch_newctx(void *provctx);
- void OSSL_FUNC_keyexch_freectx(void *ctx);
- void *OSSL_FUNC_keyexch_dupctx(void *ctx);
+ void *{keyexch_newctx}(void *provctx);
+ void {keyexch_freectx}(void *ctx);
+ void *{keyexch_dupctx}(void *ctx);
 
  /* Shared secret derivation */
- int OSSL_FUNC_keyexch_init(void *ctx, void *provkey);
- int OSSL_FUNC_keyexch_set_peer(void *ctx, void *provkey);
- int OSSL_FUNC_keyexch_derive(void *ctx, unsigned char *secret, size_t *secretlen,
-                              size_t outlen);
+ int {keyexch_init}(void *ctx, void *provkey);
+ int {keyexch_set_peer}(void *ctx, void *provkey);
+ int {keyexch_derive}(void *ctx, unsigned char *secret, size_t *secretlen,
+                      size_t outlen);
 
  /* Key Exchange parameters */
- int OSSL_FUNC_keyexch_set_ctx_params(void *ctx, const OSSL_PARAM params[]);
- const OSSL_PARAM *OSSL_FUNC_keyexch_settable_ctx_params(void);
- int OSSL_FUNC_keyexch_get_ctx_params(void *ctx, OSSL_PARAM params[]);
- const OSSL_PARAM *OSSL_FUNC_keyexch_gettable_ctx_params(void);
+ int {keyexch_set_ctx_params}(void *ctx, const OSSL_PARAM params[]);
+ const OSSL_PARAM *{keyexch_settable_ctx_params}(void);
+ int {keyexch_get_ctx_params}(void *ctx, OSSL_PARAM params[]);
+ const OSSL_PARAM *{keyexch_gettable_ctx_params}(void);
 
 =head1 DESCRIPTION
 
-This documentation is primarily aimed at provider authors. See L<provider(7)>
-for further information.
+This documentation is primarily aimed at provider authors.
+See L<provider(7)> for further information.
 
 The key exchange (OSSL_OP_KEYEXCH) operation enables providers to implement key
-exchange algorithms and make them available to applications via 
-L<EVP_PKEY_derive(3)> and
-other related functions).
+exchange algorithms and make them available to applications via
+L<EVP_PKEY_derive(3)> (and other related functions).
 
-All "functions" mentioned here are passed as function pointers between
+All functions listed here are so called I<dispatched functions>
+(see L<provider-base(7)/Dispatched Functions>),
+which are passed as function pointers between
 F<libcrypto> and the provider in B<OSSL_DISPATCH> arrays via
 B<OSSL_ALGORITHM> arrays that are returned by the provider's
 provider_query_operation() function
 (see L<provider-base(7)/Provider Functions>).
 
-All these "functions" have a corresponding function type definition
-named B<OSSL_{name}_fn>, and a helper function to retrieve the
-function pointer from an B<OSSL_DISPATCH> element named
-B<OSSL_FUNC_{name}>.
-For example, the "function" OSSL_FUNC_keyexch_newctx() has these:
-
- typedef void *(OSSL_FUNC_keyexch_newctx_fn)(void *provctx);
- static ossl_inline OSSL_FUNC_keyexch_newctx_fn
-     OSSL_FUNC_keyexch_newctx(const OSSL_DISPATCH *opf);
-
 B<OSSL_DISPATCH> arrays are indexed by numbers that are provided as
 macros in L<openssl-core_dispatch.h(7)>, as follows:
 
- OSSL_FUNC_keyexch_newctx                OSSL_FUNC_KEYEXCH_NEWCTX
- OSSL_FUNC_keyexch_freectx               OSSL_FUNC_KEYEXCH_FREECTX
- OSSL_FUNC_keyexch_dupctx                OSSL_FUNC_KEYEXCH_DUPCTX
+ {keyexch_newctx}                OSSL_FUNC_KEYEXCH_NEWCTX
+ {keyexch_freectx}               OSSL_FUNC_KEYEXCH_FREECTX
+ {keyexch_dupctx}                OSSL_FUNC_KEYEXCH_DUPCTX
 
- OSSL_FUNC_keyexch_init                  OSSL_FUNC_KEYEXCH_INIT
- OSSL_FUNC_keyexch_set_peer              OSSL_FUNC_KEYEXCH_SET_PEER
- OSSL_FUNC_keyexch_derive                OSSL_FUNC_KEYEXCH_DERIVE
+ {keyexch_init}                  OSSL_FUNC_KEYEXCH_INIT
+ {keyexch_set_peer}              OSSL_FUNC_KEYEXCH_SET_PEER
+ {keyexch_derive}                OSSL_FUNC_KEYEXCH_DERIVE
 
- OSSL_FUNC_keyexch_set_ctx_params        OSSL_FUNC_KEYEXCH_SET_CTX_PARAMS
- OSSL_FUNC_keyexch_settable_ctx_params   OSSL_FUNC_KEYEXCH_SETTABLE_CTX_PARAMS
- OSSL_FUNC_keyexch_get_ctx_params        OSSL_FUNC_KEYEXCH_GET_CTX_PARAMS
- OSSL_FUNC_keyexch_gettable_ctx_params   OSSL_FUNC_KEYEXCH_GETTABLE_CTX_PARAMS
+ {keyexch_set_ctx_params}        OSSL_FUNC_KEYEXCH_SET_CTX_PARAMS
+ {keyexch_settable_ctx_params}   OSSL_FUNC_KEYEXCH_SETTABLE_CTX_PARAMS
+ {keyexch_get_ctx_params}        OSSL_FUNC_KEYEXCH_GET_CTX_PARAMS
+ {keyexch_gettable_ctx_params}   OSSL_FUNC_KEYEXCH_GETTABLE_CTX_PARAMS
 
 A key exchange algorithm implementation may not implement all of these functions.
 In order to be a consistent set of functions a provider must implement
-OSSL_FUNC_keyexch_newctx, OSSL_FUNC_keyexch_freectx, OSSL_FUNC_keyexch_init and OSSL_FUNC_keyexch_derive.
+{keyexch_newctx}, {keyexch_freectx}, {keyexch_init} and {keyexch_derive}.
 All other functions are optional.
 
 A key exchange algorithm must also implement some mechanism for generating,
@@ -87,29 +82,29 @@ See L<provider-keymgmt(7)> for further details.
 
 =head2 Context Management Functions
 
-OSSL_FUNC_keyexch_newctx() should create and return a pointer to a provider side
+{keyexch_newctx}() should create and return a pointer to a provider side
 structure for holding context information during a key exchange operation.
 A pointer to this context will be passed back in a number of the other key
 exchange operation function calls.
 The parameter I<provctx> is the provider context generated during provider
 initialisation (see L<provider(7)>).
 
-OSSL_FUNC_keyexch_freectx() is passed a pointer to the provider side key exchange
+{keyexch_freectx}() is passed a pointer to the provider side key exchange
 context in the I<ctx> parameter.
 This function should free any resources associated with that context.
 
-OSSL_FUNC_keyexch_dupctx() should duplicate the provider side key exchange context in
+{keyexch_dupctx}() should duplicate the provider side key exchange context in
 the I<ctx> parameter and return the duplicate copy.
 
 =head2 Shared Secret Derivation Functions
 
-OSSL_FUNC_keyexch_init() initialises a key exchange operation given a provider side key
+{keyexch_init}() initialises a key exchange operation given a provider side key
 exchange context in the I<ctx> parameter, and a pointer to a provider key object
 in the I<provkey> parameter. The key object should have been previously
 generated, loaded or imported into the provider using the key management
 (OSSL_OP_KEYMGMT) operation (see provider-keymgmt(7)>.
 
-OSSL_FUNC_keyexch_set_peer() is called to supply the peer's public key (in the
+{keyexch_set_peer}() is called to supply the peer's public key (in the
 I<provkey> parameter) to be used when deriving the shared secret.
 It is also passed a previously initialised key exchange context in the I<ctx>
 parameter.
@@ -117,7 +112,7 @@ The key object should have been previously generated, loaded or imported into
 the provider using the key management (OSSL_OP_KEYMGMT) operation (see
 provider-keymgmt(7)>.
 
-OSSL_FUNC_keyexch_derive() performs the actual key exchange itself by deriving a shared
+{keyexch_derive}() performs the actual key exchange itself by deriving a shared
 secret.
 A previously initialised key exchange context is passed in the I<ctx>
 parameter.
@@ -129,24 +124,24 @@ written to I<*secretlen>.
 
 =head2 Key Exchange Parameters Functions
 
-OSSL_FUNC_keyexch_set_ctx_params() sets key exchange parameters associated with the
+{keyexch_set_ctx_params}() sets key exchange parameters associated with the
 given provider side key exchange context I<ctx> to I<params>,
 see L</Common Key Exchange parameters>.
 Any parameter settings are additional to any that were previously set.
 
-OSSL_FUNC_keyexch_get_ctx_params() gets key exchange parameters associated with the
+{keyexch_get_ctx_params}() gets key exchange parameters associated with the
 given provider side key exchange context I<ctx> into I<params>,
 see L</Common Key Exchange parameters>.
 
-OSSL_FUNC_keyexch_settable_ctx_params() yields a constant B<OSSL_PARAM> array that
+{keyexch_settable_ctx_params}() yields a constant B<OSSL_PARAM> array that
 describes the settable parameters, i.e. parameters that can be used with
 OP_signature_set_ctx_params().
-If OSSL_FUNC_keyexch_settable_ctx_params() is present, OSSL_FUNC_keyexch_set_ctx_params() must
+If {keyexch_settable_ctx_params}() is present, {keyexch_set_ctx_params}() must
 also be present, and vice versa.
-Similarly, OSSL_FUNC_keyexch_gettable_ctx_params() yields a constant B<OSSL_PARAM>
+Similarly, {keyexch_gettable_ctx_params}() yields a constant B<OSSL_PARAM>
 array that describes the gettable parameters, i.e. parameters that can be
 handled by OP_signature_get_ctx_params().
-If OSSL_FUNC_keyexch_gettable_ctx_params() is present, OSSL_FUNC_keyexch_get_ctx_params() must
+If {keyexch_gettable_ctx_params}() is present, {keyexch_get_ctx_params}() must
 also be present, and vice versa.
 See L<OSSL_PARAM(3)> for the use of B<OSSL_PARAM> as parameter descriptor.
 
@@ -155,7 +150,7 @@ Notice that not all settable parameters are also gettable, and vice versa.
 =head2 Common Key Exchange parameters
 
 See L<OSSL_PARAM(3)> for further details on the parameters structure used by
-the OSSL_FUNC_keyexch_set_ctx_params() and OSSL_FUNC_keyexch_get_ctx_params() functions.
+the {keyexch_set_ctx_params}() and {keyexch_get_ctx_params}() functions.
 
 Common parameters currently recognised by built-in key exchange algorithms are
 as follows.
@@ -177,14 +172,14 @@ possible secret size.
 
 =head1 RETURN VALUES
 
-OSSL_FUNC_keyexch_newctx() and OSSL_FUNC_keyexch_dupctx() should return the newly created
+{keyexch_newctx}() and {keyexch_dupctx}() should return the newly created
 provider side key exchange context, or NULL on failure.
 
-OSSL_FUNC_keyexch_init(), OSSL_FUNC_keyexch_set_peer(), OSSL_FUNC_keyexch_derive(),
-OSSL_FUNC_keyexch_set_params(), and OSSL_FUNC_keyexch_get_params() should return 1 for success
+{keyexch_init}(), {keyexch_set_peer}(), {keyexch_derive}(),
+{keyexch_set_params}(), and {keyexch_get_params}() should return 1 for success
 or 0 on error.
 
-OSSL_FUNC_keyexch_settable_ctx_params() and OSSL_FUNC_keyexch_gettable_ctx_params() should
+{keyexch_settable_ctx_params}() and {keyexch_gettable_ctx_params}() should
 always return a constant B<OSSL_PARAM> array.
 
 =head1 SEE ALSO
