--- a/doc/man7/provider-keymgmt.pod
+++ b/doc/man7/provider-keymgmt.pod
@@ -2,10 +2,13 @@
 
 =head1 NAME
 
-provider-keymgmt - The KEYMGMT library E<lt>-E<gt> provider functions
+provider-keymgmt - The KEYMGMT provider dispatch interface
 
 =head1 SYNOPSIS
 
+=for openssl multiple includes
+
+ #include <openssl/core_names.h>
  #include <openssl/core_dispatch.h>
 
  /*
@@ -15,42 +18,42 @@ provider-keymgmt - The KEYMGMT library E<lt>-E<gt> provider functions
   */
 
  /* Key object (keydata) creation and destruction */
- void *OSSL_FUNC_keymgmt_new(void *provctx);
- void OSSL_FUNC_keymgmt_free(void *keydata);
+ void *{keymgmt_new}(void *provctx);
+ void {keymgmt_free}(void *keydata);
 
- void *OSSL_FUNC_keymgmt_gen_init(void *provctx, int selection);
- int OSSL_FUNC_keymgmt_gen_set_template(void *genctx, void *template);
- int OSSL_FUNC_keymgmt_gen_set_params(void *genctx, const OSSL_PARAM params[]);
- const OSSL_PARAM *OSSL_FUNC_keymgmt_gen_settable_params(void *provctx);
- void *OSSL_FUNC_keymgmt_gen(void *genctx, OSSL_CALLBACK *cb, void *cbarg);
- void OSSL_FUNC_keymgmt_gen_cleanup(void *genctx);
+ void *{keymgmt_gen_init}(void *provctx, int selection);
+ int {keymgmt_gen_set_template}(void *genctx, void *template);
+ int {keymgmt_gen_set_params}(void *genctx, const OSSL_PARAM params[]);
+ const OSSL_PARAM *{keymgmt_gen_settable_params}(void *provctx);
+ void *{keymgmt_gen}(void *genctx, OSSL_CALLBACK *cb, void *cbarg);
+ void {keymgmt_gen_cleanup}(void *genctx);
 
  /* Key object information */
- int OSSL_FUNC_keymgmt_get_params(void *keydata, OSSL_PARAM params[]);
- const OSSL_PARAM *OSSL_FUNC_keymgmt_gettable_params(void);
- int OSSL_FUNC_keymgmt_set_params(void *keydata, const OSSL_PARAM params[]);
- const OSSL_PARAM *OSSL_FUNC_keymgmt_settable_params(void);
+ int {keymgmt_get_params}(void *keydata, OSSL_PARAM params[]);
+ const OSSL_PARAM *{keymgmt_gettable_params}(void);
+ int {keymgmt_set_params}(void *keydata, const OSSL_PARAM params[]);
+ const OSSL_PARAM *{keymgmt_settable_params}(void);
 
  /* Key object content checks */
- int OSSL_FUNC_keymgmt_has(void *keydata, int selection);
- int OSSL_FUNC_keymgmt_match(const void *keydata1, const void *keydata2,
+ int {keymgmt_has}(void *keydata, int selection);
+ int {keymgmt_match}(const void *keydata1, const void *keydata2,
                              int selection);
 
  /* Discovery of supported operations */
- const char *OSSL_FUNC_keymgmt_query_operation_name(int operation_id);
+ const char *{keymgmt_query_operation_name}(int operation_id);
 
  /* Key object import and export functions */
- int OSSL_FUNC_keymgmt_import(int selection, void *keydata, const OSSL_PARAM params[]);
- const OSSL_PARAM *OSSL_FUNC_keymgmt_import_types(int selection);
- int OSSL_FUNC_keymgmt_export(int selection, void *keydata,
+ int {keymgmt_import}(int selection, void *keydata, const OSSL_PARAM params[]);
+ const OSSL_PARAM *{keymgmt_import_types}(int selection);
+ int {keymgmt_export}(int selection, void *keydata,
                               OSSL_CALLBACK *param_cb, void *cbarg);
- const OSSL_PARAM *OSSL_FUNC_keymgmt_export_types(int selection);
+ const OSSL_PARAM *{keymgmt_export_types}(int selection);
 
  /* Key object copy */
- int OSSL_FUNC_keymgmt_copy(void *keydata_to, const void *keydata_from, int selection);
+ int {keymgmt_copy}(void *keydata_to, const void *keydata_from, int selection);
 
  /* Key object validation */
- int OSSL_FUNC_keymgmt_validate(void *keydata, int selection);
+ int {keymgmt_validate}(void *keydata, int selection);
 
 =head1 DESCRIPTION
 
@@ -75,42 +78,42 @@ All these "functions" have a corresponding function type definition
 named B<OSSL_{name}_fn>, and a helper function to retrieve the
 function pointer from a B<OSSL_DISPATCH> element named
 B<OSSL_FUNC_{name}>.
-For example, the "function" OSSL_FUNC_keymgmt_new() has these:
+For example, the "function" {keymgmt_new}() has these:
 
- typedef void *(OSSL_FUNC_keymgmt_new_fn)(void *provctx);
- static ossl_inline OSSL_FUNC_keymgmt_new_fn
-     OSSL_FUNC_keymgmt_new(const OSSL_DISPATCH *opf);
+ typedef void *({keymgmt_new_fn})(void *provctx);
+ static ossl_inline {keymgmt_new_fn}
+     {keymgmt_new}(const OSSL_DISPATCH *opf);
 
 B<OSSL_DISPATCH> arrays are indexed by numbers that are provided as
 macros in L<openssl-core_dispatch.h(7)>, as follows:
 
- OSSL_FUNC_keymgmt_new                  OSSL_FUNC_KEYMGMT_NEW
- OSSL_FUNC_keymgmt_free                 OSSL_FUNC_KEYMGMT_FREE
+ {keymgmt_new}                  OSSL_FUNC_KEYMGMT_NEW
+ {keymgmt_free}                 OSSL_FUNC_KEYMGMT_FREE
 
- OSSL_FUNC_keymgmt_gen_init             OSSL_FUNC_KEYMGMT_GEN_INIT
- OSSL_FUNC_keymgmt_gen_set_template     OSSL_FUNC_KEYMGMT_GEN_SET_TEMPLATE
- OSSL_FUNC_keymgmt_gen_set_params       OSSL_FUNC_KEYMGMT_GEN_SET_PARAMS
- OSSL_FUNC_keymgmt_gen_settable_params  OSSL_FUNC_KEYMGMT_GEN_SETTABLE_PARAMS
- OSSL_FUNC_keymgmt_gen                  OSSL_FUNC_KEYMGMT_GEN
- OSSL_FUNC_keymgmt_gen_cleanup          OSSL_FUNC_KEYMGMT_GEN_CLEANUP
+ {keymgmt_gen_init}             OSSL_FUNC_KEYMGMT_GEN_INIT
+ {keymgmt_gen_set_template}     OSSL_FUNC_KEYMGMT_GEN_SET_TEMPLATE
+ {keymgmt_gen_set_params}       OSSL_FUNC_KEYMGMT_GEN_SET_PARAMS
+ {keymgmt_gen_settable_params}  OSSL_FUNC_KEYMGMT_GEN_SETTABLE_PARAMS
+ {keymgmt_gen}                  OSSL_FUNC_KEYMGMT_GEN
+ {keymgmt_gen_cleanup}          OSSL_FUNC_KEYMGMT_GEN_CLEANUP
 
- OSSL_FUNC_keymgmt_get_params           OSSL_FUNC_KEYMGMT_GET_PARAMS
- OSSL_FUNC_keymgmt_gettable_params      OSSL_FUNC_KEYMGMT_GETTABLE_PARAMS
- OSSL_FUNC_keymgmt_set_params           OSSL_FUNC_KEYMGMT_SET_PARAMS
- OSSL_FUNC_keymgmt_settable_params      OSSL_FUNC_KEYMGMT_SETTABLE_PARAMS
+ {keymgmt_get_params}           OSSL_FUNC_KEYMGMT_GET_PARAMS
+ {keymgmt_gettable_params}      OSSL_FUNC_KEYMGMT_GETTABLE_PARAMS
+ {keymgmt_set_params}           OSSL_FUNC_KEYMGMT_SET_PARAMS
+ {keymgmt_settable_params}      OSSL_FUNC_KEYMGMT_SETTABLE_PARAMS
 
- OSSL_FUNC_keymgmt_query_operation_name OSSL_FUNC_KEYMGMT_QUERY_OPERATION_NAME
+ {keymgmt_query_operation_name} OSSL_FUNC_KEYMGMT_QUERY_OPERATION_NAME
 
- OSSL_FUNC_keymgmt_has                  OSSL_FUNC_KEYMGMT_HAS
- OSSL_FUNC_keymgmt_validate             OSSL_FUNC_KEYMGMT_VALIDATE
- OSSL_FUNC_keymgmt_match                OSSL_FUNC_KEYMGMT_MATCH
+ {keymgmt_has}                  OSSL_FUNC_KEYMGMT_HAS
+ {keymgmt_validate}             OSSL_FUNC_KEYMGMT_VALIDATE
+ {keymgmt_match}                OSSL_FUNC_KEYMGMT_MATCH
 
- OSSL_FUNC_keymgmt_import               OSSL_FUNC_KEYMGMT_IMPORT
- OSSL_FUNC_keymgmt_import_types         OSSL_FUNC_KEYMGMT_IMPORT_TYPES
- OSSL_FUNC_keymgmt_export               OSSL_FUNC_KEYMGMT_EXPORT
- OSSL_FUNC_keymgmt_export_types         OSSL_FUNC_KEYMGMT_EXPORT_TYPES
+ {keymgmt_import}               OSSL_FUNC_KEYMGMT_IMPORT
+ {keymgmt_import_types}         OSSL_FUNC_KEYMGMT_IMPORT_TYPES
+ {keymgmt_export}               OSSL_FUNC_KEYMGMT_EXPORT
+ {keymgmt_export_types}         OSSL_FUNC_KEYMGMT_EXPORT_TYPES
 
- OSSL_FUNC_keymgmt_copy                 OSSL_FUNC_KEYMGMT_COPY
+ {keymgmt_copy}                 OSSL_FUNC_KEYMGMT_COPY
 
 =head2 Key Objects
 
@@ -201,73 +204,73 @@ the other half.
 
 =head2 Constructing and Destructing Functions
 
-OSSL_FUNC_keymgmt_new() should create a provider side key object.  The
+{keymgmt_new}() should create a provider side key object.  The
 provider context I<provctx> is passed and may be incorporated in the
 key object, but that is not mandatory.
 
-OSSL_FUNC_keymgmt_free() should free the passed I<keydata>.
+{keymgmt_free}() should free the passed I<keydata>.
 
-OSSL_FUNC_keymgmt_gen_init(), OSSL_FUNC_keymgmt_gen_set_template(),
-OSSL_FUNC_keymgmt_gen_set_params(), OSSL_FUNC_keymgmt_gen_settable_params(),
-OSSL_FUNC_keymgmt_gen() and OSSL_FUNC_keymgmt_gen_cleanup() work together as a more
+{keymgmt_gen_init}(), {keymgmt_gen_set_template}(),
+{keymgmt_gen_set_params}(), {keymgmt_gen_settable_params}(),
+{keymgmt_gen}() and {keymgmt_gen_cleanup}() work together as a more
 elaborate context based key object constructor.
 
-OSSL_FUNC_keymgmt_gen_init() should create the key object generation context
+{keymgmt_gen_init}() should create the key object generation context
 and initialize it with I<selections>, which will determine what kind
 of contents the key object to be generated should get.
 
-OSSL_FUNC_keymgmt_gen_set_template() should add I<template> to the context
+{keymgmt_gen_set_template}() should add I<template> to the context
 I<genctx>.  The I<template> is assumed to be a key object constructed
 with the same KEYMGMT, and from which content that the implementation
 chooses can be used as a template for the key object to be generated.
 Typically, the generation of a DSA or DH key would get the domain
 parameters from this I<template>.
 
-OSSL_FUNC_keymgmt_gen_set_params() should set additional parameters from
+{keymgmt_gen_set_params}() should set additional parameters from
 I<params> in the key object generation context I<genctx>.
 
-OSSL_FUNC_keymgmt_gen_settable_params() should return a constant array of
-descriptor B<OSSL_PARAM>, for parameters that OSSL_FUNC_keymgmt_gen_set_params() 
+{keymgmt_gen_settable_params}() should return a constant array of
+descriptor B<OSSL_PARAM>, for parameters that {keymgmt_gen_set_params}() 
 can handle.
 
-OSSL_FUNC_keymgmt_gen() should perform the key object generation itself, and
+{keymgmt_gen}() should perform the key object generation itself, and
 return the result.  The callback I<cb> should be called at regular
 intervals with indications on how the key object generation
 progresses.
 
-OSSL_FUNC_keymgmt_gen_cleanup() should clean up and free the key object
+{keymgmt_gen_cleanup}() should clean up and free the key object
 generation context I<genctx>
 
-At least one of OSSL_FUNC_keymgmt_new() and OSSL_FUNC_keymgmt_gen() are mandatory,
-as well as OSSL_FUNC_keymgmt_free().  Additionally, if OSSL_FUNC_keymgmt_gen() is
-present, OSSL_FUNC_keymgmt_gen_init() and OSSL_FUNC_keymgmt_gen_cleanup() must be
+At least one of {keymgmt_new}() and {keymgmt_gen}() are mandatory,
+as well as {keymgmt_free}().  Additionally, if {keymgmt_gen}() is
+present, {keymgmt_gen_init}() and {keymgmt_gen_cleanup}() must be
 present as well.
 
 =head2 Key Object Information Functions
 
-OSSL_FUNC_keymgmt_get_params() should extract information data associated
+{keymgmt_get_params}() should extract information data associated
 with the given I<keydata>, see L</Common Information Parameters>.
 
-OSSL_FUNC_keymgmt_gettable_params() should return a constant array of
-descriptor B<OSSL_PARAM>, for parameters that OSSL_FUNC_keymgmt_get_params()
+{keymgmt_gettable_params}() should return a constant array of
+descriptor B<OSSL_PARAM>, for parameters that {keymgmt_get_params}()
 can handle.
 
-If OSSL_FUNC_keymgmt_gettable_params() is present, OSSL_FUNC_keymgmt_get_params()
+If {keymgmt_gettable_params}() is present, {keymgmt_get_params}()
 must also be present, and vice versa.
 
-OSSL_FUNC_keymgmt_set_params() should update information data associated
+{keymgmt_set_params}() should update information data associated
 with the given I<keydata>, see L</Common Information Parameters>.
 
-OSSL_FUNC_keymgmt_settable_params() should return a constant array of
-descriptor B<OSSL_PARAM>, for parameters that OSSL_FUNC_keymgmt_set_params()
+{keymgmt_settable_params}() should return a constant array of
+descriptor B<OSSL_PARAM>, for parameters that {keymgmt_set_params}()
 can handle.
 
-If OSSL_FUNC_keymgmt_settable_params() is present, OSSL_FUNC_keymgmt_set_params()
+If {keymgmt_settable_params}() is present, {keymgmt_set_params}()
 must also be present, and vice versa.
 
 =head2 Key Object Checking Functions
 
-OSSL_FUNC_keymgmt_query_operation_name() should return the name of the
+{keymgmt_query_operation_name}() should return the name of the
 supported algorithm for the operation I<operation_id>.  This is
 similar to provider_query_operation() (see L<provider-base(7)>),
 but only works as an advisory.  If this function is not present, or
@@ -275,13 +278,13 @@ returns NULL, the caller is free to assume that there's an algorithm
 from the same provider, of the same name as the one used to fetch the
 keymgmt and try to use that.
 
-OSSL_FUNC_keymgmt_has() should check whether the given I<keydata> contains the subsets
+{keymgmt_has}() should check whether the given I<keydata> contains the subsets
 of data indicated by the I<selector>.  A combination of several
 selector bits must consider all those subsets, not just one.  An
 implementation is, however, free to consider an empty subset of data
 to still be a valid subset.
 
-OSSL_FUNC_keymgmt_validate() should check if the I<keydata> contains valid
+{keymgmt_validate}() should check if the I<keydata> contains valid
 data subsets indicated by I<selection>.  Some combined selections of
 data subsets may cause validation of the combined data.
 For example, the combination of B<OSSL_KEYMGMT_SELECT_PRIVATE_KEY> and
@@ -289,29 +292,29 @@ B<OSSL_KEYMGMT_SELECT_PUBLIC_KEY> (or B<OSSL_KEYMGMT_SELECT_KEYPAIR>
 for short) is expected to check that the pairwise consistency of
 I<keydata> is valid.
 
-OSSL_FUNC_keymgmt_match() should check if the data subset indicated by
+{keymgmt_match}() should check if the data subset indicated by
 I<selection> in I<keydata1> and I<keydata2> match.  It is assumed that
 the caller has ensured that I<keydata1> and I<keydata2> are both owned
 by the implementation of this function.
 
 =head2 Key Object Import, Export and Copy Functions
 
-OSSL_FUNC_keymgmt_import() should import data indicated by I<selection> into
+{keymgmt_import}() should import data indicated by I<selection> into
 I<keydata> with values taken from the B<OSSL_PARAM> array I<params>.
 
-OSSL_FUNC_keymgmt_export() should extract values indicated by I<selection>
+{keymgmt_export}() should extract values indicated by I<selection>
 from I<keydata>, create an B<OSSL_PARAM> array with them and call
 I<param_cb> with that array as well as the given I<cbarg>.
 
-OSSL_FUNC_keymgmt_import_types() should return a constant array of descriptor
+{keymgmt_import_types}() should return a constant array of descriptor
 B<OSSL_PARAM> for data indicated by I<selection>, for parameters that
-OSSL_FUNC_keymgmt_import() can handle.
+{keymgmt_import}() can handle.
 
-OSSL_FUNC_keymgmt_export_types() should return a constant array of descriptor
+{keymgmt_export_types}() should return a constant array of descriptor
 B<OSSL_PARAM> for data indicated by I<selection>, that the
-OSSL_FUNC_keymgmt_export() callback can expect to receive.
+{keymgmt_export}() callback can expect to receive.
 
-OSSL_FUNC_keymgmt_copy() should copy data subsets indicated by I<selection>
+{keymgmt_copy}() should copy data subsets indicated by I<selection>
 from I<keydata_from> to I<keydata_to>.  It is assumed that the caller
 has ensured that I<keydata_to> and I<keydata_from> are both owned by
 the implementation of this function.
@@ -353,26 +356,25 @@ Bits of security is defined in SP800-57.
 
 =head1 RETURN VALUES
 
-OSSL_FUNC_keymgmt_new() should return a valid reference to the newly created provider
+{keymgmt_new}() should return a valid reference to the newly created provider
 side key object, or NULL on failure.
 
-OSSL_FUNC_keymgmt_import(), OSSL_FUNC_keymgmt_export(), OSSL_FUNC_keymgmt_get_params() and
-OSSL_FUNC_keymgmt_set_params() should return 1 for success or 0 on error.
+{keymgmt_import}(), {keymgmt_export}(), {keymgmt_get_params}() and
+{keymgmt_set_params}() should return 1 for success or 0 on error.
 
-OSSL_FUNC_keymgmt_validate() should return 1 on successful validation, or 0 on
+{keymgmt_validate}() should return 1 on successful validation, or 0 on
 failure.
 
-OSSL_FUNC_keymgmt_has() should return 1 if all the selected data subsets are contained
+{keymgmt_has}() should return 1 if all the selected data subsets are contained
 in the given I<keydata> or 0 otherwise.
 
-OSSL_FUNC_keymgmt_query_operation_name() should return a pointer to a string matching
+{keymgmt_query_operation_name}() should return a pointer to a string matching
 the requested operation, or NULL if the same name used to fetch the keymgmt
 applies.
 
-OSSL_FUNC_keymgmt_gettable_params() and OSSL_FUNC_keymgmt_settable_params()
-OSSL_FUNC_keymgmt_import_types(), OSSL_FUNC_keymgmt_export_types()
-should
-always return a constant B<OSSL_PARAM> array.
+{keymgmt_gettable_params}() and {keymgmt_settable_params}()
+{keymgmt_import_types}(), {keymgmt_export_types}()
+should always return a constant B<OSSL_PARAM> array.
 
 =head1 SEE ALSO
 
@@ -383,7 +385,7 @@ L<EVP_PKEY-DSA(7)>, L<EVP_PKEY-DH(7)>
 
 =head1 HISTORY
 
-The KEYMGMT interface was introduced in OpenSSL 3.0.
+The KEYMGMT provider interface was introduced in OpenSSL 3.0.
 
 =head1 COPYRIGHT
 
