--- a/doc/man7/provider-signature.pod
+++ b/doc/man7/provider-signature.pod
@@ -2,77 +2,81 @@
 
 =head1 NAME
 
-provider-signature - The signature library E<lt>-E<gt> provider functions
+provider-signature - The SIGNATURE provider dispatch interface
 
 =head1 SYNOPSIS
 
 =for openssl multiple includes
 
- #include <openssl/core_dispatch.h>
  #include <openssl/core_names.h>
+ #include <openssl/core_dispatch.h>
 
  /*
-  * None of these are actual functions, but are displayed like this for
-  * the function signatures for functions that are offered as function
-  * pointers in OSSL_DISPATCH arrays.
+  * The following function prototypes don't represent actual C functions
+  * but rather the signatures of so-called 'dispatched' functions.
+  * To indicate the difference, curly {braces} have been added around
+  * the function names.
+  *
+  * See L<provider-base(7)/Dispatched Functions> for an explanation
+  * how to interpret those prototypes.
   */
 
  /* Context management */
- void *OSSL_FUNC_signature_newctx(void *provctx);
- void OSSL_FUNC_signature_freectx(void *ctx);
- void *OSSL_FUNC_signature_dupctx(void *ctx);
+ void *{signature_newctx}(void *provctx);
+ void {signature_freectx}(void *ctx);
+ void *{signature_dupctx}(void *ctx);
 
  /* Signing */
- int OSSL_FUNC_signature_sign_init(void *ctx, void *provkey);
- int OSSL_FUNC_signature_sign(void *ctx, unsigned char *sig, size_t *siglen,
-                              size_t sigsize, const unsigned char *tbs, size_t tbslen);
+ int {signature_sign_init}(void *ctx, void *provkey);
+ int {signature_sign}(void *ctx, unsigned char *sig, size_t *siglen,
+                      size_t sigsize, const unsigned char *tbs, size_t tbslen);
 
  /* Verifying */
- int OSSL_FUNC_signature_verify_init(void *ctx, void *provkey);
- int OSSL_FUNC_signature_verify(void *ctx, const unsigned char *sig, size_t siglen,
-                                const unsigned char *tbs, size_t tbslen);
+ int {signature_verify_init}(void *ctx, void *provkey);
+ int {signature_verify}(void *ctx, const unsigned char *sig, size_t siglen,
+                        const unsigned char *tbs, size_t tbslen);
 
  /* Verify Recover */
- int OSSL_FUNC_signature_verify_recover_init(void *ctx, void *provkey);
- int OSSL_FUNC_signature_verify_recover(void *ctx, unsigned char *rout,
-                                        size_t *routlen, size_t routsize,
-                                        const unsigned char *sig, size_t siglen);
+ int {signature_verify_recover_init}(void *ctx, void *provkey);
+ int {signature_verify_recover}(void *ctx, unsigned char *rout,
+                                size_t *routlen, size_t routsize,
+                                const unsigned char *sig, size_t siglen);
 
  /* Digest Sign */
- int OSSL_FUNC_signature_digest_sign_init(void *ctx, const char *mdname,
-                                          const char *props, void *provkey);
- int OSSL_FUNC_signature_digest_sign_update(void *ctx, const unsigned char *data,
-                                     size_t datalen);
- int OSSL_FUNC_signature_digest_sign_final(void *ctx, unsigned char *sig,
-                                           size_t *siglen, size_t sigsize);
- int OSSL_FUNC_signature_digest_sign(void *ctx,
-                              unsigned char *sigret, size_t *siglen,
-                              size_t sigsize, const unsigned char *tbs,
-                              size_t tbslen);
+ int {signature_digest_sign_init}(void *ctx, const char *mdname,
+                                  const char *props, void *provkey);
+ int {signature_digest_sign_update}(void *ctx, const unsigned char *data,
+                                    size_t datalen);
+ int {signature_digest_sign_final}(void *ctx, unsigned char *sig,
+                                   size_t *siglen, size_t sigsize);
+ int {signature_digest_sign}(void *ctx,
+                             unsigned char *sigret, size_t *siglen,
+                             size_t sigsize, const unsigned char *tbs,
+                             size_t tbslen);
 
  /* Digest Verify */
- int OSSL_FUNC_signature_digest_verify_init(void *ctx, const char *mdname,
-                                            const char *props, void *provkey);
- int OSSL_FUNC_signature_digest_verify_update(void *ctx,
-                                              const unsigned char *data,
-                                              size_t datalen);
- int OSSL_FUNC_signature_digest_verify_final(void *ctx, const unsigned char *sig,
-                                      size_t siglen);
- int OSSL_FUNC_signature_digest_verify(void *ctx, const unsigned char *sig,
-                                size_t siglen, const unsigned char *tbs,
-                                size_t tbslen);
+ int {signature_digest_verify_init}(void *ctx, const char *mdname,
+                                    const char *props, void *provkey);
+ int {signature_digest_verify_update}(void *ctx,
+                                      const unsigned char *data,
+                                      size_t datalen);
+ int {signature_digest_verify_final}(void *ctx, const unsigned char *sig,
+                                     size_t siglen);
+ int {signature_digest_verify}(void *ctx, const unsigned char *sig,
+                               size_t siglen, const unsigned char *tbs,
+                               size_t tbslen);
 
  /* Signature parameters */
- int OSSL_FUNC_signature_get_ctx_params(void *ctx, OSSL_PARAM params[]);
- const OSSL_PARAM *OSSL_FUNC_signature_gettable_ctx_params(void);
- int OSSL_FUNC_signature_set_ctx_params(void *ctx, const OSSL_PARAM params[]);
- const OSSL_PARAM *OSSL_FUNC_signature_settable_ctx_params(void);
+ int {signature_get_ctx_params}(void *ctx, OSSL_PARAM params[]);
+ const OSSL_PARAM *{signature_gettable_ctx_params}(void);
+ int {signature_set_ctx_params}(void *ctx, const OSSL_PARAM params[]);
+ const OSSL_PARAM *{signature_settable_ctx_params}(void);
 
  /* MD parameters */
- int OSSL_FUNC_signature_get_ctx_md_params(void *ctx, OSSL_PARAM params[]);
- const OSSL_PARAM * OSSL_FUNC_signature_gettable_ctx_md_params(void *ctx);
- int OSSL_FUNC_signature_set_ctx_md_params(void *ctx, const OSSL_PARAM params[]);
- const OSSL_PARAM * OSSL_FUNC_signature_settable_ctx_md_params(void *ctx);
+ int {signature_get_ctx_md_params}(void *ctx, OSSL_PARAM params[]);
+ const OSSL_PARAM * {signature_gettable_ctx_md_params}(void *ctx);
+ int {signature_set_ctx_md_params}(void *ctx, const OSSL_PARAM params[]);
+ const OSSL_PARAM * {signature_settable_ctx_md_params}(void *ctx);
 
 =head1 DESCRIPTION
 
@@ -96,75 +100,75 @@ All these "functions" have a corresponding function type definition
 named B<OSSL_{name}_fn>, and a helper function to retrieve the
 function pointer from an B<OSSL_DISPATCH> element named
 B<OSSL_FUNC_{name}>.
-For example, the "function" OSSL_FUNC_signature_newctx() has these:
+For example, the "function" {signature_newctx}() has these:
 
- typedef void *(OSSL_FUNC_signature_newctx_fn)(void *provctx);
- static ossl_inline OSSL_FUNC_signature_newctx_fn
-     OSSL_FUNC_signature_newctx(const OSSL_DISPATCH *opf);
+ typedef void *({signature_newctx_fn})(void *provctx);
+ static ossl_inline {signature_newctx_fn}
+     {signature_newctx}(const OSSL_DISPATCH *opf);
 
 B<OSSL_DISPATCH> arrays are indexed by numbers that are provided as
 macros in L<openssl-core_dispatch.h(7)>, as follows:
 
- OSSL_FUNC_signature_newctx                 OSSL_FUNC_SIGNATURE_NEWCTX
- OSSL_FUNC_signature_freectx                OSSL_FUNC_SIGNATURE_FREECTX
- OSSL_FUNC_signature_dupctx                 OSSL_FUNC_SIGNATURE_DUPCTX
+ {signature_newctx}                 OSSL_FUNC_SIGNATURE_NEWCTX
+ {signature_freectx}                OSSL_FUNC_SIGNATURE_FREECTX
+ {signature_dupctx}                 OSSL_FUNC_SIGNATURE_DUPCTX
 
- OSSL_FUNC_signature_sign_init              OSSL_FUNC_SIGNATURE_SIGN_INIT
- OSSL_FUNC_signature_sign                   OSSL_FUNC_SIGNATURE_SIGN
+ {signature_sign_init}              OSSL_FUNC_SIGNATURE_SIGN_INIT
+ {signature_sign}                   OSSL_FUNC_SIGNATURE_SIGN
 
- OSSL_FUNC_signature_verify_init            OSSL_FUNC_SIGNATURE_VERIFY_INIT
- OSSL_FUNC_signature_verify                 OSSL_FUNC_SIGNATURE_VERIFY
+ {signature_verify_init}            OSSL_FUNC_SIGNATURE_VERIFY_INIT
+ {signature_verify}                 OSSL_FUNC_SIGNATURE_VERIFY
 
- OSSL_FUNC_signature_verify_recover_init    OSSL_FUNC_SIGNATURE_VERIFY_RECOVER_INIT
- OSSL_FUNC_signature_verify_recover         OSSL_FUNC_SIGNATURE_VERIFY_RECOVER
+ {signature_verify_recover_init}    OSSL_FUNC_SIGNATURE_VERIFY_RECOVER_INIT
+ {signature_verify_recover}         OSSL_FUNC_SIGNATURE_VERIFY_RECOVER
 
- OSSL_FUNC_signature_digest_sign_init       OSSL_FUNC_SIGNATURE_DIGEST_SIGN_INIT
- OSSL_FUNC_signature_digest_sign_update     OSSL_FUNC_SIGNATURE_DIGEST_SIGN_UPDATE
- OSSL_FUNC_signature_digest_sign_final      OSSL_FUNC_SIGNATURE_DIGEST_SIGN_FINAL
- OSSL_FUNC_signature_digest_sign            OSSL_FUNC_SIGNATURE_DIGEST_SIGN
+ {signature_digest_sign_init}       OSSL_FUNC_SIGNATURE_DIGEST_SIGN_INIT
+ {signature_digest_sign_update}     OSSL_FUNC_SIGNATURE_DIGEST_SIGN_UPDATE
+ {signature_digest_sign_final}      OSSL_FUNC_SIGNATURE_DIGEST_SIGN_FINAL
+ {signature_digest_sign}            OSSL_FUNC_SIGNATURE_DIGEST_SIGN
 
- OSSL_FUNC_signature_digest_verify_init     OSSL_FUNC_SIGNATURE_DIGEST_VERIFY_INIT
- OSSL_FUNC_signature_digest_verify_update   OSSL_FUNC_SIGNATURE_DIGEST_VERIFY_UPDATE
- OSSL_FUNC_signature_digest_verify_final    OSSL_FUNC_SIGNATURE_DIGEST_VERIFY_FINAL
- OSSL_FUNC_signature_digest_verify          OSSL_FUNC_SIGNATURE_DIGEST_VERIFY
+ {signature_digest_verify_init}     OSSL_FUNC_SIGNATURE_DIGEST_VERIFY_INIT
+ {signature_digest_verify_update}   OSSL_FUNC_SIGNATURE_DIGEST_VERIFY_UPDATE
+ {signature_digest_verify_final}    OSSL_FUNC_SIGNATURE_DIGEST_VERIFY_FINAL
+ {signature_digest_verify}          OSSL_FUNC_SIGNATURE_DIGEST_VERIFY
 
- OSSL_FUNC_signature_get_ctx_params         OSSL_FUNC_SIGNATURE_GET_CTX_PARAMS
- OSSL_FUNC_signature_gettable_ctx_params    OSSL_FUNC_SIGNATURE_GETTABLE_CTX_PARAMS
- OSSL_FUNC_signature_set_ctx_params         OSSL_FUNC_SIGNATURE_SET_CTX_PARAMS
- OSSL_FUNC_signature_settable_ctx_params    OSSL_FUNC_SIGNATURE_SETTABLE_CTX_PARAMS
+ {signature_get_ctx_params}         OSSL_FUNC_SIGNATURE_GET_CTX_PARAMS
+ {signature_gettable_ctx_params}    OSSL_FUNC_SIGNATURE_GETTABLE_CTX_PARAMS
+ {signature_set_ctx_params}         OSSL_FUNC_SIGNATURE_SET_CTX_PARAMS
+ {signature_settable_ctx_params}    OSSL_FUNC_SIGNATURE_SETTABLE_CTX_PARAMS
 
- OSSL_FUNC_signature_get_ctx_md_params      OSSL_FUNC_SIGNATURE_GET_CTX_MD_PARAMS
- OSSL_FUNC_signature_gettable_ctx_md_params OSSL_FUNC_SIGNATURE_GETTABLE_CTX_MD_PARAMS
- OSSL_FUNC_signature_set_ctx_md_params      OSSL_FUNC_SIGNATURE_SET_CTX_MD_PARAMS
- OSSL_FUNC_signature_settable_ctx_md_params OSSL_FUNC_SIGNATURE_SETTABLE_CTX_MD_PARAMS
+ {signature_get_ctx_md_params}      OSSL_FUNC_SIGNATURE_GET_CTX_MD_PARAMS
+ {signature_gettable_ctx_md_params} OSSL_FUNC_SIGNATURE_GETTABLE_CTX_MD_PARAMS
+ {signature_set_ctx_md_params}      OSSL_FUNC_SIGNATURE_SET_CTX_MD_PARAMS
+ {signature_settable_ctx_md_params} OSSL_FUNC_SIGNATURE_SETTABLE_CTX_MD_PARAMS
 
 A signature algorithm implementation may not implement all of these functions.
 In order to be a consistent set of functions we must have at least a set of
-context functions (OSSL_FUNC_signature_newctx and OSSL_FUNC_signature_freectx) as well as a
+context functions ({signature_newctx} and {signature_freectx}) as well as a
 set of "signature" functions, i.e. at least one of:
 
 =over 4
 
-=item OSSL_FUNC_signature_sign_init and OSSL_FUNC_signature_sign
+=item {signature_sign_init} and {signature_sign}
 
-=item OSSL_FUNC_signature_verify_init and OSSL_FUNC_signature_verify
+=item {signature_verify_init} and {signature_verify}
 
-=item OSSL_FUNC_signature_verify_recover_init and OSSL_FUNC_signature_verify_init
+=item {signature_verify_recover_init} and {signature_verify_init}
 
-=item OSSL_FUNC_signature_digest_sign_init, OSSL_FUNC_signature_digest_sign_update and OSSL_FUNC_signature_digest_sign_final
+=item {signature_digest_sign_init}, {signature_digest_sign_update} and {signature_digest_sign_final}
 
-=item OSSL_FUNC_signature_digest_verify_init, OSSL_FUNC_signature_digest_verify_update and OSSL_FUNC_signature_digest_verify_final
+=item {signature_digest_verify_init}, {signature_digest_verify_update} and {signature_digest_verify_final}
 
-=item OSSL_FUNC_signature_digest_sign_init and OSSL_FUNC_signature_digest_sign
+=item {signature_digest_sign_init} and {signature_digest_sign}
 
-=item OSSL_FUNC_signature_digest_verify_init and OSSL_FUNC_signature_digest_verify
+=item {signature_digest_verify_init} and {signature_digest_verify}
 
 =back
 
-OSSL_FUNC_signature_set_ctx_params and OSSL_FUNC_signature_settable_ctx_params are optional,
+{signature_set_ctx_params} and {signature_settable_ctx_params} are optional,
 but if one of them is present then the other one must also be present. The same
-applies to OSSL_FUNC_signature_get_ctx_params and OSSL_FUNC_signature_gettable_ctx_params, as
-well as the "md_params" functions. The OSSL_FUNC_signature_dupctx function is optional.
+applies to {signature_get_ctx_params} and {signature_gettable_ctx_params}, as
+well as the "md_params" functions. The {signature_dupctx} function is optional.
 
 A signature algorithm must also implement some mechanism for generating,
 loading or importing keys via the key management (OSSL_OP_KEYMGMT) operation.
@@ -172,30 +176,30 @@ See L<provider-keymgmt(7)> for further details.
 
 =head2 Context Management Functions
 
-OSSL_FUNC_signature_newctx() should create and return a pointer to a provider side
+{signature_newctx}() should create and return a pointer to a provider side
 structure for holding context information during a signature operation.
 A pointer to this context will be passed back in a number of the other signature
 operation function calls.
 The parameter I<provctx> is the provider context generated during provider
 initialisation (see L<provider(7)>).
 
-OSSL_FUNC_signature_freectx() is passed a pointer to the provider side signature
+{signature_freectx}() is passed a pointer to the provider side signature
 context in the I<ctx> parameter.
 This function should free any resources associated with that context.
 
-OSSL_FUNC_signature_dupctx() should duplicate the provider side signature context in
+{signature_dupctx}() should duplicate the provider side signature context in
 the I<ctx> parameter and return the duplicate copy.
 
 =head2 Signing Functions
 
-OSSL_FUNC_signature_sign_init() initialises a context for signing given a provider side
+{signature_sign_init}() initialises a context for signing given a provider side
 signature context in the I<ctx> parameter, and a pointer to a provider key object
 in the I<provkey> parameter.
 The key object should have been previously generated, loaded or imported into
 the provider using the key management (OSSL_OP_KEYMGMT) operation (see
 provider-keymgmt(7)>.
 
-OSSL_FUNC_signature_sign() performs the actual signing itself.
+{signature_sign}() performs the actual signing itself.
 A previously initialised signature context is passed in the I<ctx>
 parameter.
 The data to be signed is pointed to be the I<tbs> parameter which is I<tbslen>
@@ -208,14 +212,14 @@ I<*siglen>.
 
 =head2 Verify Functions
 
-OSSL_FUNC_signature_verify_init() initialises a context for verifying a signature given
+{signature_verify_init}() initialises a context for verifying a signature given
 a provider side signature context in the I<ctx> parameter, and a pointer to a
 provider key object in the I<provkey> parameter.
 The key object should have been previously generated, loaded or imported into
 the provider using the key management (OSSL_OP_KEYMGMT) operation (see
 provider-keymgmt(7)>.
 
-OSSL_FUNC_signature_verify() performs the actual verification itself.
+{signature_verify}() performs the actual verification itself.
 A previously initialised signature context is passed in the I<ctx> parameter.
 The data that the signature covers is pointed to be the I<tbs> parameter which
 is I<tbslen> bytes long.
@@ -224,14 +228,14 @@ long.
 
 =head2 Verify Recover Functions
 
-OSSL_FUNC_signature_verify_recover_init() initialises a context for recovering the
+{signature_verify_recover_init}() initialises a context for recovering the
 signed data given a provider side signature context in the I<ctx> parameter, and
 a pointer to a provider key object in the I<provkey> parameter.
 The key object should have been previously generated, loaded or imported into
 the provider using the key management (OSSL_OP_KEYMGMT) operation (see
 provider-keymgmt(7)>.
 
-OSSL_FUNC_signature_verify_recover() performs the actual verify recover itself.
+{signature_verify_recover}() performs the actual verify recover itself.
 A previously initialised signature context is passed in the I<ctx> parameter.
 The signature is pointed to by the I<sig> parameter which is I<siglen> bytes
 long.
@@ -243,7 +247,7 @@ the I<routlen> parameter.
 
 =head2 Digest Sign Functions
 
-OSSL_FUNC_signature_digeset_sign_init() initialises a context for signing given a
+{signature_digeset_sign_init}() initialises a context for signing given a
 provider side signature context in the I<ctx> parameter, and a pointer to a
 provider key object in the I<provkey> parameter. The key object should have been
 previously generated, loaded or imported into the provider using the
@@ -252,23 +256,23 @@ The name of the digest to be used will be in the I<mdname> parameter. There may
 also be properties to be used in fetching the digest in the I<props> parameter,
 although this may be ignored by providers.
 
-OSSL_FUNC_signature_digest_sign_update() provides data to be signed in the I<data>
+{signature_digest_sign_update}() provides data to be signed in the I<data>
 parameter which should be of length I<datalen>. A previously initialised
 signature context is passed in the I<ctx> parameter. This function may be called
 multiple times to cumulatively add data to be signed.
 
-OSSL_FUNC_signature_digest_sign_final() finalises a signature operation previously
-started through OSSL_FUNC_signature_digest_sign_init() and
-OSSL_FUNC_signature_digest_sign_update() calls. Once finalised no more data will be
-added through OSSL_FUNC_signature_digest_sign_update(). A previously initialised
+{signature_digest_sign_final}() finalises a signature operation previously
+started through {signature_digest_sign_init}() and
+{signature_digest_sign_update}() calls. Once finalised no more data will be
+added through {signature_digest_sign_update}(). A previously initialised
 signature context is passed in the I<ctx> parameter. Unless I<sig> is NULL, the
 signature should be written to the location pointed to by the I<sig> parameter
 and it should not exceed I<sigsize> bytes in length. The length of the signature
 should be written to I<*siglen>. If I<sig> is NULL then the maximum length of
 the signature should be written to I<*siglen>.
 
-OSSL_FUNC_signature_digest_sign() implements a "one shot" digest sign operation
-previously started through OSSL_FUNC_signature_digeset_sign_init(). A previously
+{signature_digest_sign}() implements a "one shot" digest sign operation
+previously started through {signature_digeset_sign_init}(). A previously
 initialised signature context is passed in the I<ctx> parameter. The data to be
 signed is in I<tbs> which should be I<tbslen> bytes long. Unless I<sig> is NULL,
 the signature should be written to the location pointed to by the I<sig>
@@ -278,7 +282,7 @@ length of the signature should be written to I<*siglen>.
 
 =head2 Digest Verify Functions
 
-OSSL_FUNC_signature_digeset_verify_init() initialises a context for verifying given a
+{signature_digeset_verify_init}() initialises a context for verifying given a
 provider side verification context in the I<ctx> parameter, and a pointer to a
 provider key object in the I<provkey> parameter. The key object should have been
 previously generated, loaded or imported into the provider using the
@@ -287,20 +291,20 @@ The name of the digest to be used will be in the I<mdname> parameter. There may
 also be properties to be used in fetching the digest in the I<props> parameter,
 although this may be ignored by providers.
 
-OSSL_FUNC_signature_digest_verify_update() provides data to be verified in the I<data>
+{signature_digest_verify_update}() provides data to be verified in the I<data>
 parameter which should be of length I<datalen>. A previously initialised
 verification context is passed in the I<ctx> parameter. This function may be
 called multiple times to cumulatively add data to be verified.
 
-OSSL_FUNC_signature_digest_verify_final() finalises a verification operation previously
-started through OSSL_FUNC_signature_digest_verify_init() and
-OSSL_FUNC_signature_digest_verify_update() calls. Once finalised no more data will be
-added through OSSL_FUNC_signature_digest_verify_update(). A previously initialised
+{signature_digest_verify_final}() finalises a verification operation previously
+started through {signature_digest_verify_init}() and
+{signature_digest_verify_update}() calls. Once finalised no more data will be
+added through {signature_digest_verify_update}(). A previously initialised
 verification context is passed in the I<ctx> parameter. The signature to be
 verified is in I<sig> which is I<siglen> bytes long.
 
-OSSL_FUNC_signature_digest_verify() implements a "one shot" digest verify operation
-previously started through OSSL_FUNC_signature_digeset_verify_init(). A previously
+{signature_digest_verify}() implements a "one shot" digest verify operation
+previously started through {signature_digeset_verify_init}(). A previously
 initialised verification context is passed in the I<ctx> parameter. The data to be
 verified is in I<tbs> which should be I<tbslen> bytes long. The signature to be
 verified is in I<sig> which is I<siglen> bytes long.
@@ -308,11 +312,11 @@ verified is in I<sig> which is I<siglen> bytes long.
 =head2 Signature parameters
 
 See L<OSSL_PARAM(3)> for further details on the parameters structure used by
-the OSSL_FUNC_signature_get_ctx_params() and OSSL_FUNC_signature_set_ctx_params() functions.
+the {signature_get_ctx_params}() and {signature_set_ctx_params}() functions.
 
-OSSL_FUNC_signature_get_ctx_params() gets signature parameters associated with the
+{signature_get_ctx_params}() gets signature parameters associated with the
 given provider side signature context I<ctx> and stored them in I<params>.
-OSSL_FUNC_signature_set_ctx_params() sets the signature parameters associated with the
+{signature_set_ctx_params}() sets the signature parameters associated with the
 given provider side signature context I<ctx> to I<params>.
 Any parameter settings are additional to any that were previously set.
 
@@ -357,21 +361,21 @@ supply known values that either pass or fail.
 
 =back
 
-OSSL_FUNC_signature_gettable_ctx_params() and OSSL_FUNC_signature_settable_ctx_params() get a
+{signature_gettable_ctx_params}() and {signature_settable_ctx_params}() get a
 constant B<OSSL_PARAM> array that describes the gettable and settable parameters,
-i.e. parameters that can be used with OSSL_FUNC_signature_get_ctx_params() and
-OSSL_FUNC_signature_set_ctx_params() respectively.
+i.e. parameters that can be used with {signature_get_ctx_params}() and
+{signature_set_ctx_params}() respectively.
 See L<OSSL_PARAM(3)> for the use of B<OSSL_PARAM> as parameter descriptor.
 
 =head2 MD parameters
 
 See L<OSSL_PARAM(3)> for further details on the parameters structure used by
-the OSSL_FUNC_signature_get_md_ctx_params() and OSSL_FUNC_signature_set_md_ctx_params()
+the {signature_get_md_ctx_params}() and {signature_set_md_ctx_params}()
 functions.
 
-OSSL_FUNC_signature_get_md_ctx_params() gets digest parameters associated with the
+{signature_get_md_ctx_params}() gets digest parameters associated with the
 given provider side digest signature context I<ctx> and stores them in I<params>.
-OSSL_FUNC_signature_set_ms_ctx_params() sets the digest parameters associated with the
+{signature_set_ms_ctx_params}() sets the digest parameters associated with the
 given provider side digest signature context I<ctx> to I<params>.
 Any parameter settings are additional to any that were previously set.
 
@@ -379,20 +383,20 @@ Parameters currently recognised by built-in signature algorithms are the same
 as those for built-in digest algorithms. See
 L<provider-digest(7)/Digest Parameters> for further information.
 
-OSSL_FUNC_signature_gettable_md_ctx_params() and OSSL_FUNC_signature_settable_md_ctx_params()
+{signature_gettable_md_ctx_params}() and {signature_settable_md_ctx_params}()
 get a constant B<OSSL_PARAM> array that describes the gettable and settable
 digest parameters, i.e. parameters that can be used with
-OSSL_FUNC_signature_get_md_ctx_params() and OSSL_FUNC_signature_set_md_ctx_params()
+{signature_get_md_ctx_params}() and {signature_set_md_ctx_params}()
 respectively. See L<OSSL_PARAM(3)> for the use of B<OSSL_PARAM> as parameter
 descriptor.
 
 =head1 RETURN VALUES
 
-OSSL_FUNC_signature_newctx() and OSSL_FUNC_signature_dupctx() should return the newly created
+{signature_newctx}() and {signature_dupctx}() should return the newly created
 provider side signature, or NULL on failure.
 
-OSSL_FUNC_signature_gettable_ctx_params(), OSSL_FUNC_signature_settable_ctx_params(),
-OSSL_FUNC_signature_gettable_md_ctx_params() and OSSL_FUNC_signature_settable_md_ctx_params(),
+{signature_gettable_ctx_params}(), {signature_settable_ctx_params}(),
+{signature_gettable_md_ctx_params}() and {signature_settable_md_ctx_params}(),
 return the gettable or settable parameters in a constant B<OSSL_PARAM> array.
 
 All other functions should return 1 for success or 0 on error.
